[gd_scene load_steps=8 format=3 uid="uid://chms70770ee4w"]

[ext_resource type="Script" uid="uid://lr82a42m5fmu" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://ckuxxnwrbgven" path="res://assets/little guy.png" id="2_rkbax"]
[ext_resource type="AudioStream" uid="uid://bfwxp2rtkr0ib" path="res://assets/dash_sound.wav" id="3_g1dw6"]
[ext_resource type="AudioStream" uid="uid://cd8jvduxa7ani" path="res://assets/enemy_hit.ogg" id="4_yw30f"]

[sub_resource type="Animation" id="Animation_yw30f"]
resource_name = "run"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336, 1, 1.5333333),
"transitions": PackedFloat32Array(0.99999887, 1, 0.9012523, 1.0352653),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjkh3"]
_data = {
&"run": SubResource("Animation_yw30f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oul6g"]
size = Vector2(11, 16)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_rkbax")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_rkbax")
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qjkh3")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_oul6g")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
limit_top = -234

[node name="dashCd" type="Timer" parent="."]
one_shot = true

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g1dw6")
volume_db = -18.258

[node name="enemyDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yw30f")
volume_db = -13.383
